Polls to check DMs, logs new messages and shows "NEW DM" on the pane (if it's awake)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "id": "lindsaymarkward.app-twitter",
-  "name": "Ninja Sphere Twitter App",
-  "version": "0.1.0",
+  "name": "app-twitter",
+  "version": "0.2.0",
   "description": "Ninja Sphere Twitter App",
   "main": "app-twitter",
   "scripts": {
